# pyled

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: distribution.yml  main.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_assets/: redirect.html
src/leds/: __init__.py  cli.py  core.py  event_viewer.py  utils.py  waveform_browse.py
src/leds/layouts/: legend_event_display.ui  legend_event_display2.ui  legend_event_display3.ui  legend_waveform_display.ui
tests/: test_core.py
