[metadata]
name = leds
version = attr: leds._version.version
description = LEGEND Event Display
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/leds
author = Katharina von Sturm
author_email = vonsturm@pd.infn.it
maintainer = Someone
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    pygama@git+https://github.com/legend-exp/pygama@refactor#egg=pygama
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    leds[docs,test]
docs =
    myst-parser
    sphinx
    sphinx-copybutton
    sphinx-multiversion-pre-post-build>=0.2.4
    sphinx-rtd-theme
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501
